--- a/css/main.css
+++ b/css/main.css
@@ -114,15 +114,7 @@ header{
     margin-right: 15px;
 }
 
-.banner{
-    max-width: 1206px;
-    height: 300px;
-    background: #dde2e8;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.banner__content{
+#banner{
     max-width: 1206px;
     margin-left: auto;
     margin-right: auto;
